Update jvm-command.md